# renta-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tag_version.sh
api/: index.py
data/: checksums.json  fuentes.yaml
evaluations/: renta_mcp_eval.xml
helpers/: __init__.py  data_loader.py  env_config.py  formatting.py  logging.py  sentry.py  tax_engine.py  user_agent.py
prompts/: __init__.py  optimizar_deducciones.py  preparar_declaracion.py  revisar_borrador.py  simular_declaracion.py
resources/: __init__.py  casillas.py  deducciones.py  minimos.py  municipios_despoblacion.py  obligacion.py  plazos.py  tramos.py
scripts/: descargar_datos_aeat.py  extraer_casillas_manual.py  parsear_deducciones_aeat.py  parsear_xsd_modelo_100.py  smoke_mcp.sh  verificar_checksums.py
tests/: test_cobertura_deducciones.py  test_cobertura_territorial.py  test_contra_renta_web_open.py  test_contracts_public_surface.py  test_data_loader.py  test_ejercicio_2024.py  test_health_endpoint.py  test_imports.py  test_resources.py  test_tax_engine.py  test_tax_engine_deducciones.py  test_tax_engine_properties.py  test_tools.py  test_tools_deducciones_casillas.py  test_tools_derivadas.py  test_tools_nuevas_capacidades.py  test_trazabilidad_fuentes.py
tools/: __init__.py  buscar_casilla.py  buscar_deduccion.py  calcular_ganancia_cripto_fifo.py  calcular_irpf.py  calcular_rendimiento_actividad.py  calcular_retencion_nomina.py  consultar_minimos.py  (+12 more)
(+88 files in other folders)
